data/derived/comb/progs/unify/prog3828.ml.out
Characters 103-104:
  | Sine(x)		-> sin (pi *. (eval x) )
                                 ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
